<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".auth.LoginFragment">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo_reco"
            android:layout_width="400dp"
            android:layout_height="250dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/reco_menu"
            />

        <TextView
            android:id="@+id/welcoming_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo_reco"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="2dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/sign_in_now"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="32sp"
            />

        <TextView
            android:id="@+id/sign_in_please"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcoming_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/please_sign_in"
            android:textColor="@color/gray"
            android:textSize="24sp"
            />

    </RelativeLayout>


    <TextView
        android:id="@+id/label_auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="188dp"
        android:layout_marginTop="16dp"
        android:text="@string/login_string"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:transitionName="auth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container" />

    <Button
        android:id="@+id/btn_action"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="160dp"
        android:background="@drawable/custom_sign_in_button"
        android:text="@string/sign_in_button"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:transitionName="action"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_auth" />

    <LinearLayout
        android:id="@+id/container_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:transitionName="misc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_action">

        <TextView
            android:id="@+id/label_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_account"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/sign_up"
            android:textColor="@color/blue_register"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/label_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_connect"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_2"
        app:layout_constraintVertical_bias="0.0" />

    <com.dicoding.learn.recomenu.customview.EditTextEmail
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="900dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="188dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_auth"
        android:textColorHint="@color/secondary"/>

    <com.dicoding.learn.recomenu.customview.EditTextPassword
        android:id="@+id/editTextTextPassword"
        android:layout_width="900dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="188dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        android:textColorHint="@color/secondary"/>

    <ImageView
        android:id="@+id/gmail_logo"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:src="@drawable/gmail_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_connect"
        app:layout_constraintVertical_bias="0.251" />


</androidx.constraintlayout.widget.ConstraintLayout>