<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.member.RegistrationForm">

    <TextView
        android:id="@+id/name_registration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="96dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/name_form_registration"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.dicoding.learn.recomenu.customview.EditTextEmail
        android:id="@+id/input_name_registration"
        android:layout_width="900dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="196dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/name_form_registration"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/secondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_registration" />

    <TextView
        android:id="@+id/hp_registration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/no_hp"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_name_registration" />

    <com.dicoding.learn.recomenu.customview.EditTextEmail
        android:id="@+id/input_phone_registration"
        android:layout_width="900dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="196dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/secondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hp_registration" />

    <TextView
        android:id="@+id/email_registration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/email_form_registration"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_phone_registration"
        app:layout_constraintVertical_bias="0.0" />

    <com.dicoding.learn.recomenu.customview.EditTextEmail
        android:id="@+id/input_email_registration"
        android:layout_width="900dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="196dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/email_input_form"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/secondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_registration" />

    <Button
        android:id="@+id/btn_action"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom_sign_in_button"
        android:text="@string/sign_up_button"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:transitionName="action"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_email_registration" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="4dp"
        android:focusable="false"
        app:itemTextColor="@color/secondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav" />


</androidx.constraintlayout.widget.ConstraintLayout>