<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".auth.RegisterFragment">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:id="@+id/logo_reco"
        android:layout_width="400dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/reco_menu"
        />

        <TextView
            android:id="@+id/welcoming_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo_reco"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="2dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/sign_up_now"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="60sp"
            />
        <TextView
            android:id="@+id/click_direction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcoming_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/click_the_button"
            android:textColor="@color/gray"
            android:textSize="20sp"
            />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_action"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="176dp"
        android:background="@drawable/custom_sign_in_button"
        android:text="@string/sign_up_button"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:transitionName="action"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container" />


</androidx.constraintlayout.widget.ConstraintLayout>